<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.acss.centurion.MainActivity" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startButton"
        android:layout_alignParentTop="true"
        android:src="@drawable/acss_logo" />

    <Button
        android:id="@+id/bottomButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/stop" />

    <TextView
        android:id="@+id/shots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_below="@+id/shotsHad"
        android:layout_marginTop="10dp"
        android:text="@string/shots"
        android:textSize="32dp" />

    <TextView
        android:id="@+id/shotsHad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/shots"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="10dp"
        android:text="@string/shotsHad"
        android:textSize="32dp" />



    <Button
        android:id="@+id/startButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomButton"
        android:layout_alignLeft="@+id/bottomButton"
        android:text="@string/start" />

    <TextView
        android:id="@+id/textTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="99:00"
        android:textSize="90dp" />

</RelativeLayout>